--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,21 +3,21 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Simple Notepad</title>
+		<title>Toonable Tasks</title>
 		<link href="/www/css/tripoli/tripoli.css" type="text/css" rel="stylesheet"> 
 		<!--[if IE]><link rel="stylesheet" type="text/css" href="/www/css/tripoli/tripoli.ie.css"><![endif]--> 
-		<link href="/www/css/simplenotepad.css" type="text/css" rel="stylesheet"> 
+		<link href="/www/css/toonable.css" type="text/css" rel="stylesheet"> 
 
 		{% block head-links %}{% endblock %}
 		<link rel="shortcut icon" href="/www/images/favicon.ico">
 
 		<script type="text/javascript" src="/www/js/jquery.js"></script>
-		<script type="text/javascript" src="/www/js/simplenotepad.js"></script>
+		<script type="text/javascript" src="/www/js/toonable.js"></script>
 		{% block head %}{% endblock %}
 
 	</head>
 
-	<body class="l1 wide equal">
+	<body class="l4 wide equal">
 		<div id="container">
 			<div id="header">
 				{% block header %} default header stuff {% endblock %}
