--- a/templates/index.html
+++ b/templates/index.html
@@ -58,11 +58,11 @@
 				<input type="text" name="text" id="name">
 				</p>
 				<label for="asap">asap</label>
-				<input type="radio" id="asap" name="priority" value="1asap">
+				<input type="radio" id="asap" name="priority" value="a1asap">
 				<label for="soon">soon</label>
-				<input type="radio" id="soon" name="priority" value="2soon" checked>
+				<input type="radio" id="soon" name="priority" value="a2soon" checked>
 				<label for="sometime">sometime</label>
-				<input type="radio" id="sometime" name="priority" value="3sometime">
+				<input type="radio" id="sometime" name="priority" value="a3sometime">
 			</fieldset>
 			<p>
 			<input type="submit" value="add">
