--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,16 +17,13 @@
 
 	</head>
 
-	<body class="l4 wide equal">
+	<body>
 		<div id="container">
 			<div id="header">
 				{% block header %} default header stuff {% endblock %}
 			</div>
 			<a id="maincontent" name="maincontent"></a>
 			{% block content %}default content{% endblock %}
-			<div id="footer">
-				{% block footer %} default header stuff {% endblock %}
-			</div>
 		</div>
 	</body>
 
