--- a/templates/index.html
+++ b/templates/index.html
@@ -15,63 +15,54 @@
 {% endblock %}
 
 {% block content %}
-<div id="primary">
-	<div class="content">
-		<ul>
-			<li><a href="http://my.safaribooksonline.com">safari books</a></li>
-			<li><a href="http://necronomicorp.com/l-space/">l-space</a></li>
-			<li><a href="http://quickdraw.laits.utexas.edu/dase1">dase dev</a></li>
-			<li><a href="https://liberalartsits.seework.com/clients">basecamp</a></li>
-			<li><a href="http://nytimes.com">nytimes</a></li>
-			<li><a href="http://reddit.com/r/programming">reddit</a></li>
-			<li><a href="http://news.ycombinator.com">hacker news</a></li>
-			<li><a href="http://del.icio.us/network/pkeane">del.icio.us network</a></li>
-			<li><a href="http://twitter.com">twitters</a></li>
-			<li><a href="https://utdirect.utexas.edu/pntime/">timesheets</a></li>
-			<li><a href="http://atompub.org/rfc4287.html">Atom Syndication Format</a></li>
-			<li><a href="http://bitworking.org/projects/atom/rfc5023.html">Atom Publishing Protocol</a></li>
-			<li><a href="https://postgres.laits.utexas.edu/phppgadmin">pg</a></li>
-		</ul>
-	</div>
-</div>
-
-<div id="secondary">
-	<div class="content">
-		<ul id="todos">
-			{% for t in todos %}
-			<li>
-			<a href="todo/{{ t.key }}" class="{{ t.priority }}">{{ t.text }}</a> 
-			<a href="todo/{{ t.key }}" class="delete">[X]</a>
-			</li>
-			{% endfor %}
-		</ul>
-	</div>
-</div>
-
-<div id="tertiary">
-	<div class="content">
-		<form action="todos" method="post">
-
-			<fieldset>
-				<legend>new to do</legend>
+<table>
+	<tr>
+		<td class="left">
+			<ul>
+				<li><a href="http://my.safaribooksonline.com">safari books</a></li>
+				<li><a href="http://necronomicorp.com/l-space/">l-space</a></li>
+				<li><a href="http://quickdraw.laits.utexas.edu/dase1">dase dev</a></li>
+				<li><a href="https://liberalartsits.seework.com/clients">basecamp</a></li>
+				<li><a href="http://nytimes.com">nytimes</a></li>
+				<li><a href="http://reddit.com/r/programming">reddit</a></li>
+				<li><a href="http://news.ycombinator.com">hacker news</a></li>
+				<li><a href="http://del.icio.us/network/pkeane">del.icio.us network</a></li>
+				<li><a href="http://twitter.com">twitters</a></li>
+				<li><a href="https://utdirect.utexas.edu/pntime/">timesheets</a></li>
+				<li><a href="http://atompub.org/rfc4287.html">Atom Syndication Format</a></li>
+				<li><a href="http://bitworking.org/projects/atom/rfc5023.html">Atom Publishing Protocol</a></li>
+				<li><a href="https://postgres.laits.utexas.edu/phppgadmin">pg</a></li>
+			</ul>
+		</td>
+		<td class="center">
+			<ul id="todos">
+				{% for t in todos %}
+				<li>
+				<a href="todo/{{ t.key }}" class="{{ t.priority }}">{{ t.text }}</a> 
+				<a href="todo/{{ t.key }}" class="delete">[X]</a>
+				</li>
+				{% endfor %}
+			</ul>
+		</td>
+		<td class="right">
+			<form action="todos" method="post">
+				<fieldset>
+					<legend>new to do</legend>
+					<p>
+					<input type="text" name="text" id="name">
+					</p>
+					<label for="asap">asap</label>
+					<input type="radio" id="asap" name="priority" value="a1asap">
+					<label for="soon">soon</label>
+					<input type="radio" id="soon" name="priority" value="a2soon" checked>
+					<label for="sometime">sometime</label>
+					<input type="radio" id="sometime" name="priority" value="a3sometime">
+				</fieldset>
 				<p>
-				<input type="text" name="text" id="name">
+				<input type="submit" value="add">
 				</p>
-				<label for="asap">asap</label>
-				<input type="radio" id="asap" name="priority" value="a1asap">
-				<label for="soon">soon</label>
-				<input type="radio" id="soon" name="priority" value="a2soon" checked>
-				<label for="sometime">sometime</label>
-				<input type="radio" id="sometime" name="priority" value="a3sometime">
-			</fieldset>
-			<p>
-			<input type="submit" value="add">
-			</p>
-		</form>
-	</div>
-</div>
-
-{% endblock %}
-
-{% block footer %}
+			</form>
+		</td>
+	</tr>
+</table>
 {% endblock %}
