--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 	<head>
+		<meta name="verify-v1" content="kFTP4R2RWB7zsWqAFbtxW1sh4vn2TwWc71UL2Z7pB+Y=" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Toonable Tasks</title>
 		<link href="/www/css/tripoli/tripoli.css" type="text/css" rel="stylesheet"> 
