--- a/www/css/toonable.css
+++ b/www/css/toonable.css
@@ -31,7 +31,7 @@ input[type='text'] {
 
 table {
 	width: 100%;
-	border-spacing: 8px;
+	border-spacing: 4px;
 }
 
 table td {
@@ -49,7 +49,7 @@ table td {
 	color: #aaa;
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
-	margin: 0px 8px;
+	margin: 0px 4px;
 }
 
 #header a {
@@ -65,7 +65,7 @@ table td {
 
 td.left {
 	padding: 1em;
-	background:#ccc;
+	background:#eee;
 	-moz-border-radius: 5px; 
 	-webkit-border-radius: 5px; 
 	margin-bottom: 2px; 
