--- a/www/css/toonable.css
+++ b/www/css/toonable.css
@@ -31,7 +31,7 @@ input[type='text'] {
 }
 
 #container {
-	margin: 3px;
+	margin: 0px;
 }
 
 table {
@@ -55,8 +55,7 @@ table td {
 	font-family: verdana,sans-serif;
 	padding: 4px 10px;
 	background:#000; 
-	background:#f60; 
-	background:#fea900; 
+	background:#dd0; 
 	color: #000;
 	margin: 0px;
 }
