--- a/www/css/toonable.css
+++ b/www/css/toonable.css
@@ -55,7 +55,7 @@ table td {
 	font-family: verdana,sans-serif;
 	padding: 4px 10px;
 	background:#000; 
-	background:#dd0; 
+	background:#ddd; 
 	color: #000;
 	margin: 0px;
 }
